# addmores_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
LLM_code/: amedi_embedding.py
LLM_code/hospital/: combine_dis_hospi_medi.py  hospi_embedding.py  hospi_llm.py  ji.py
LLM_code/intend_and_disease/: faiss_manager.py  intend_and_disease_llm.py
LLM_code/medicine/: medi_embedding.py  medi_llm.py
app/: main.py
app/api/: amedi_llm_api.py  chat.py  disease_api.py  hospi_llm_api.py  hospi_llm_exa_api.py  hospital_api.py  llm_disease_api.py  medi_llm_api.py
app/api/disease_faiss_indexes/: index_info.json
app/integration_test/: api_integer.py  generate_faiss_indexes.py
app/llm/: __init__.py  main_llm.py
app/llm/api/: __init__.py  chat_models.py
app/llm/services/: __init__.py  disease_service.py  embedding_service.py  integrated_chat_service.py  intent_classifier.py  medication_service.py  session_manager.py
app/models/: base_models.py  disease_models.py
app/services/: disease_embedding_service.py  disease_faiss_loader.py  disease_rag_service.py  disease_service.py
app/utils/: disease_constants.py  disease_exceptions.py  disease_validators.py
backup_tool/: restore_server.sh
code/medic/: call_medicine_api.py  clean_medicine.py
